--- a/pom.xml
+++ b/pom.xml
@@ -22,38 +22,11 @@
         <kotlin.code.style>official</kotlin.code.style>
         <junit.version>4.12</junit.version>
         <kotlinx.version>1.0.0</kotlinx.version>
-        <ktor.io.version>0.9.5</ktor.io.version>
         <assertj.version>3.12.0</assertj.version>
         <junit.platform.version>1.3.2</junit.platform.version>
-        <boot.dependencies.version>2.2.0.M4</boot.dependencies.version>
+        <boot.dependencies.version>2.2.6.RELEASE</boot.dependencies.version>
     </properties>
 
-    <repositories>
-        <repository>
-            <id>jcenter</id>
-            <url>https://jcenter.bintray.com</url>
-        </repository>
-        <repository>
-            <id>kotlin-ktor</id>
-            <url>https://dl.bintray.com/kotlin/ktor/</url>
-        </repository>
-        <repository>
-            <id>kotlin-eap</id>
-            <url>https://dl.bintray.com/kotlin/kotlin-eap</url>
-        </repository>
-        <repository>
-            <id>spring-milestone</id>
-            <name>Spring Milestone Repository</name>
-            <url>https://repo.spring.io/milestone</url>
-        </repository>
-    </repositories>
-
-    <pluginRepositories>
-        <pluginRepository>
-            <id>kotlin-eap</id>
-            <url>https://dl.bintray.com/kotlin/kotlin-eap</url>
-        </pluginRepository>
-    </pluginRepositories>
 
     <dependencyManagement>
         <dependencies>
@@ -122,16 +95,6 @@
         </dependency>
 
         <dependency>
-            <groupId>io.ktor</groupId>
-            <artifactId>ktor-server-netty</artifactId>
-            <version>${ktor.io.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>io.ktor</groupId>
-            <artifactId>ktor-gson</artifactId>
-            <version>${ktor.io.version}</version>
-        </dependency>
-        <dependency>
             <groupId>com.fasterxml.jackson.module</groupId>
             <artifactId>jackson-module-kotlin</artifactId>
         </dependency>
@@ -139,6 +102,15 @@
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
             <artifactId>kotlin-test-junit</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
 
@@ -163,7 +135,7 @@
                 <version>2.2.0</version>
                 <configuration>
                     <to>
-                        <image>docker.io/rlkamradt/readnews</image>
+                        <image>docker.io/rlkamradt/readnewskotlin</image>
                     </to>
                 </configuration>
             </plugin>
